...
                                <rect key="frame" x="20" y="202.5" width="335" height="262"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="30H-3e-TO1" userLabel="Username">
                                        <rect key="frame" x="20" y="30" width="295" height="44"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <textInputTraits key="textInputTraits" textContentType="username"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ymr-xG-skE" userLabel="Password">
                                        <rect key="frame" x="20" y="94" width="295" height="44"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <rect key="frame" x="20" y="188" width="295" height="44"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hDa-oc-oi3"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vWj-tF-V7s">
                                <rect key="frame" x="35" y="181" width="75" height="34"/>
                                <state key="normal" title="Dispense">
                                    <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="JAw-SZ-O1L"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Vending" id="PdS-k2-MxI"/>
                    <connections>
                        <outlet property="statusLabel" destination="hyS-BU-Cig" id="vbB-qj-jVR"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UITestTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YdC-UT-MSC">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlaceCell" rowHeight="62" id="hPs-5T-qvF" customClass="PlaceCell" customModule="XCTest_App" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="375" height="62"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                        <viewLayoutGuide key="safeArea" id="OtO-kM-iEa"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Places" id="eBu-n2-pm3"/>
                    <navigationItem key="navigationItem" id="Nsd-7x-nom"/>
                    <connections>
...
